--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "description": "Hubot for twelve23",
   "dependencies": {
     "hubot": "^2.17.0",
+    "hubot-catfacts": "^1.0.1",
     "hubot-diagnostics": "0.0.1",
     "hubot-google-images": "^0.2.6",
     "hubot-google-translate": "^0.2.0",
