--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "hubot-save-links": "0.0.24",
     "hubot-scripts": "^2.16.2",
     "hubot-shipit": "^0.2.0",
-    "hubot-slack": "^3.4.2"
+    "hubot-slack": "^3.4.2",
+    "hubot-newrelic2": "^0.2.0"
   },
   "engines": {
     "node": "0.10.x"
