--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "author": "Tyler Rilling <underlost@gmail.com>",
   "description": "Hubot for twelve23",
   "dependencies": {
-    "hubot": "^2.17.0",
+    "hubot": "^2.18.0",
+    "hubot-bitbucket": "^0.1.1",
     "hubot-catfacts": "^1.0.1",
     "hubot-d20": "^1.0.0",
     "hubot-diagnostics": "0.0.1",
@@ -22,7 +23,9 @@
     "hubot-save-links": "0.0.24",
     "hubot-scripts": "^2.16.2",
     "hubot-shipit": "^0.2.0",
-    "hubot-slack": "^3.4.2"
+    "hubot-slack": "^3.4.2",
+    "hubot-loudbot": ">= 1.0.0",
+    "hubot-hipchat": "~2.5.1-5",
   },
   "engines": {
     "node": "0.10.x"
