--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "hubot-shipit": "^0.2.0",
     "hubot-slack": "^3.4.2",
     "hubot-loudbot": ">= 1.0.0",
-    "hubot-hipchat": "~2.5.1-5",
+    "hubot-hipchat": "~2.5.1-5"
   },
   "engines": {
     "node": "0.10.x"
