--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "description": "Hubot for twelve23",
   "dependencies": {
     "hubot": "^2.18.0",
+    "hubot-at": ">= 0.0.1",
     "hubot-bitbucket": "^0.1.1",
     "hubot-catfacts": "^1.0.1",
     "hubot-d20": "^1.0.0",
@@ -14,6 +15,8 @@
     "hubot-google-translate": "^0.2.0",
     "hubot-help": "^0.1.2",
     "hubot-heroku-keepalive": "^1.0.1",
+    "hubot-hipchat": "~2.5.1-5",
+    "hubot-loudbot": ">= 1.0.0",
     "hubot-maps": "0.0.2",
     "hubot-newrelic2": "^0.2.0",
     "hubot-pugme": "^0.1.0",
@@ -24,9 +27,7 @@
     "hubot-scripts": "^2.16.2",
     "hubot-shipit": "^0.2.0",
     "hubot-slack": "^3.4.2",
-    "hubot-loudbot": ">= 1.0.0",
-    "hubot-hipchat": "~2.5.1-5",
-    "hubot-at": ">= 0.0.1"
+    "hubot-spotify-control": "^0.1.0"
   },
   "engines": {
     "node": "0.10.x"
